syntax = "proto3";

package pb;
option go_package = "grpc-string-test/pb";
service StringService{
    rpc Concat(StringRequest) returns (StringResponse){}
    rpc Diff(StringRequest) returns (StringResponse){}
    rpc ConcatServerStream(StringRequest) returns (stream StringResponse){}
    rpc ConcatClientStream(stream StringRequest) returns (StringResponse){}
    rpc ConcatDoubleStream(stream StringRequest) returns (stream StringResponse){}
}

message StringRequest{
    string A = 1;
    string B = 2;
}


message StringResponse{
    string Ret = 1;
    string err = 2;
}